--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 </head>
 <body>
     <section class="full-box">
-        <img src="images/bg.png" tppabs="" alt="">
+        <img src="index/images/bg.png" tppabs="" alt="">
         <div class="main">
             <header class="ac">
                 <h4>- Lucky Coordinate (MAX)-</h4>
