--- a/new/apk.htm
+++ b/new/apk.htm
@@ -28,40 +28,21 @@
     </header>
     <main id="content" class="main-content" role="main">
         <h2 id="welcome-to-github-pages">Welcome to GitHub Pages</h2>
-  <table>
-  <thead>
-    <tr>
-      <th>Android 影音阅读系</th>
-      <th>Android</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>
-- 音乐工具MusicTools v1.9.6.7 ：<a href="https://www.whg6.com/949.html" title="说明">①</a>　<a href="https://www.whg6.com/html/musictools/" title="官网">②</a> <br />
-- 酷我音乐10.1.2.1 解锁会员版  ：<a href="https://pan.quark.cn/s/e23723b1454e" title="Quark">①</a>　<a href="https://www.ypojie.com/2081.html" title="亿破姐">②</a> <br />
-- 资源猫1.106 去广告版 ：<a href="https://wws.lanzouw.com/ixpIm04z6wsb" title="lanzou">①</a>　<a href="https://wws.lanzouw.com/ixpIm04z6wsb" title="lanzou">②</a> <br />
-- 影视森林v2.0.2 ：<a href="https://wwt.lanzouw.com/senlin?cp=q8mjxva.1.0" title="lanzou">①</a>　<a href="https://tsq.lanzoui.com/b0c4h3qqj" title="lanzou">②</a> <br />
-- 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b" title="lanzou">①</a> <br />
-- 油管镜像Liber Tube ：<a href="https://melor.lanzoub.com/i8KV005yi03g" title="lanzou">①</a>　<a href="https://softxm.lanzoui.com/id5Of05wemfe" title="lanzou">②</a> <br />
-- 影视猫411复活版（179个源，附导入说明） ：<a href="https://tsq.lanzoui.com/b0c3g84kj" title="lanzou">①</a> <br />
-- 开源阅读legado_app_3.2 ：<a href="https://www.legado.top/" title="官网">①</a>　<a href="https://github.com/gedoor/legado/releases/" title="Github社区">②</a>　<a href="https://github.com/kaich/Yuedu" title="阅读iOS版">③</a>　<a href="https://yd.mgz6.cc/" title="喵公子">④</a>　<a href="http://yuedu.miaogongzi.net/gx.html" title="猫公子订阅">⑤</a> <br />   
-- 我的听书APPtingshu_v2.2 ：<a href="https://pan.lanzoux.com/b873905" title="lanzou">①</a>　<a href="http://wwwi.lanzoui.com/b05g1bwf" title="lanzou">②</a>　<a href="https://mp.weixin.qq.com/s/-8dsCt44eG0YsifjEa4Wdw" title="书源分享">下载③</a> <br />
-      </td>
-      <td>
-- VPN疾速PRO ：<a href="https://melor.lanzoub.com/ifZ4z05iov2b" title="lanzou">①</a>　<a href="https://github.com/xiaochunhuamete/freejisuVPN" title="Github社区">②</a><br />
-        - 资源 ：<a href="/" title="lanzou">①</a>　<a href="/" title="lanzou">②</a> <br />
-        - 资源 ：<a href="/" title="lanzou">①</a>　<a href="/" title="lanzou">②</a> <br />
-        - 资源 ：<a href="/" title="lanzou">①</a>　<a href="/" title="lanzou">②</a> <br />
-        - 资源 ：<a href="/" title="lanzou">①</a>　<a href="/" title="lanzou">②</a> <br />
-        - 资源 ：<a href="/" title="lanzou">①</a>　<a href="/" title="lanzou">②</a> <br />
-        - 资源 ：<a href="/" title="lanzou">①</a>　<a href="/" title="lanzou">②</a> <br />
-        - 资源 ：<a href="/" title="lanzou">①</a>　<a href="/" title="lanzou">②</a> <br />
-        - 资源 ：<a href="/" title="lanzou">①</a>　<a href="/" title="lanzou">②</a> <br />
-      </td>
-    </tr>
-  </tbody>
-</table>         
+      
+<pre><code>Android 影音阅读系
+   - 音乐工具MusicTools v1.9.6.7 ：<a href="https://www.whg6.com/949.html" title="说明">①</a>　<a href="https://www.whg6.com/html/musictools/" title="官网">②</a> <br />
+   - 酷我音乐10.1.2.1 解锁会员版  ：<a href="https://pan.quark.cn/s/e23723b1454e" title="Quark">①</a>　<a href="https://www.ypojie.com/2081.html" title="亿破姐">②</a> <br />
+   - 资源猫1.106 去广告版 ：<a href="https://wws.lanzouw.com/ixpIm04z6wsb" title="lanzou">①</a>　<a href="https://wws.lanzouw.com/ixpIm04z6wsb" title="lanzou">②</a> <br />
+   - 影视森林v2.0.2 ：<a href="https://wwt.lanzouw.com/senlin?cp=q8mjxva.1.0" title="lanzou">①</a>　<a href="https://tsq.lanzoui.com/b0c4h3qqj" title="lanzou">②</a> <br />
+   - 聚合vip播放器 v1.07 去广告版 ：<a href="https://melor.lanzoub.com/iDMjo03njo6b" title="lanzou">①</a> <br />
+   - 油管镜像Liber Tube ：<a href="https://melor.lanzoub.com/i8KV005yi03g" title="lanzou">①</a>　<a href="https://softxm.lanzoui.com/id5Of05wemfe" title="lanzou">②</a> <br />
+   - 影视猫411复活版（179个源，附导入说明） ：<a href="https://tsq.lanzoui.com/b0c3g84kj" title="lanzou">①</a> <br />
+   - 开源阅读legado_app_3.2 ：<a href="https://www.legado.top/" title="官网">①</a>　<a href="https://github.com/gedoor/legado/releases/" title="Github社区">②</a>　<a href="https://github.com/kaich/Yuedu" title="阅读iOS版">③</a>　<a href="https://yd.mgz6.cc/" title="喵公子">④</a>　<a href="http://yuedu.miaogongzi.net/gx.html" title="猫公子订阅">⑤</a> <br />   
+   - 我的听书APPtingshu_v2.2 ：<a href="https://pan.lanzoux.com/b873905" title="lanzou">①</a>　<a href="http://wwwi.lanzoui.com/b05g1bwf" title="lanzou">②</a>　<a href="https://mp.weixin.qq.com/s/-8dsCt44eG0YsifjEa4Wdw" title="书源分享">下载③</a> <br />
+ </code></pre>
+ <pre><code>Android 设置工具系
+   - VPN疾速PRO ：<a href="https://melor.lanzoub.com/ifZ4z05iov2b" title="lanzou">①</a>　<a href="https://github.com/xiaochunhuamete/freejisuVPN" title="Github社区">②</a><br />
+</code></pre>  
     <h3>License</h3>
 <p>本页面只是收集，自用请勿宣传。</p>
       <footer class="site-footer">    
