--- a/new/win.htm
+++ b/new/win.htm
@@ -30,29 +30,29 @@
     <main id="content" class="main-content" role="main">
         <h2 id="welcome-to-github-pages">Welcome to GitHub Pages</h2>
 <pre><code>Windos 系统办公系  
-   - U盘微PE工具箱V2.2 ：<a href="https://pan.quark.cn/s/9c631287294e" title="Quark下载">①</a>　<a href="http://www.wepe.cn/" title="官方下载">②</a> <br />
-   - Win激活HEU_KMS_Activator_v24.6.3 ：<a href="https://melor.lanzoub.com/iC1Pv05fxfji" title="lanzou下载">①</a>　<a href="https://github.com/zbezj/HEU_KMS_Activator" title="Github社区">②</a> <br />
-   - 系统查看PiriformSpeccyPro ：<a href="https://melor.lanzoub.com/iu63ov1nlij" title="lanzou下载">①</a> <br />
-   - 解压缩7-Zip 64位 ：<a href="https://melor.lanzoub.com/i2cXm04fpbpg" title="lanzou下载">①</a> <br />
-   - 解压缩winrar_x64_501sc ：<a href="https://melor.lanzoub.com/ioX2uv1ni0d" title="lanzou下载">①</a> <br />
-   - 360驱动大师2.0 绿色单文件版 ：<a href="https://melor.lanzoub.com/itglV04fp5lg" title="lanzou下载">①</a> <br />
-   - 软媒设置大师3.6.6 单文件版 ：<a href="https://melor.lanzoub.com/i8avZv1ni5i" title="lanzou下载">①</a> <br />
-   - 软媒清理大师3.7.8 单文件版 ：<a href="https://melor.lanzoub.com/iq95u05fs6je" title="lanzou下载">①</a> <br />
-   - TranslucentTB任务栏透明 ：<a href="https://melor.lanzoub.com/iCFYY05io73i" title="lanzou下载">①</a> <br />
-   - Windows.Photos照片安装包 ：<a href="https://pan.quark.cn/s/87a9b8562da9" title="Quark下载">①</a> <br />
-   - Office 2016 4in1绿色版 ：<a href="https://pan.quark.cn/s/6b0c810de4de" title="Quark下载">①</a> <br />
-   - 迅雷极速版 v1.0.35.366 ：<a href="https://melor.lanzoub.com/iZ2pmv1nicf" title="lanzou下载">①</a> <br />
-   - 百度网盘下载器antdownload 3.0.6 ：<a href="https://wws.lanzouw.com/iXsv005dx72b" title="lanzou下载">①</a>　<a href="https://wws.lanzouw.com/iXsv005dx72b" title="lanzou下载">②</a> <br />
-   - PDF工具PDFShaper v12.2解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h" title="lanzou下载">①</a>　<a href="https://tsq.lanzoui.com/b0c31k50h" title="lanzou下载">②</a> <br />
-   - 手写模拟器3.0 单文件版 ：<a href="https://tsq.lanzoui.com/b0c3v8j8h" title="lanzou下载">①</a>　<a href="https://melor.lanzoub.com/iYBWg04fnbmb" title="lanzou下载">②</a> <br />
-   - AI智能下载器7.0.33 浏览器插件 ：<a href="https://melor.lanzoub.com/iwr4m04fp5di" title="lanzou下载">①</a> <br />
+   - U盘微PE工具箱V2.2 ：<a href="https://pan.quark.cn/s/9c631287294e" title="Quark下载">①</a>　<a href="http://www.wepe.cn/" title="官方下载">②</a>  
+   - Win激活HEU_KMS_Activator_v24.6.3 ：<a href="https://melor.lanzoub.com/iC1Pv05fxfji" title="lanzou下载">①</a>　<a href="https://github.com/zbezj/HEU_KMS_Activator" title="Github社区">②</a>  
+   - 系统查看PiriformSpeccyPro ：<a href="https://melor.lanzoub.com/iu63ov1nlij" title="lanzou下载">①</a>  
+   - 解压缩7-Zip 64位 ：<a href="https://melor.lanzoub.com/i2cXm04fpbpg" title="lanzou下载">①</a>  
+   - 解压缩winrar_x64_501sc ：<a href="https://melor.lanzoub.com/ioX2uv1ni0d" title="lanzou下载">①</a> 
+   - 360驱动大师2.0 绿色单文件版 ：<a href="https://melor.lanzoub.com/itglV04fp5lg" title="lanzou下载">①</a> 
+   - 软媒设置大师3.6.6 单文件版 ：<a href="https://melor.lanzoub.com/i8avZv1ni5i" title="lanzou下载">①</a> 
+   - 软媒清理大师3.7.8 单文件版 ：<a href="https://melor.lanzoub.com/iq95u05fs6je" title="lanzou下载">①</a> 
+   - TranslucentTB任务栏透明 ：<a href="https://melor.lanzoub.com/iCFYY05io73i" title="lanzou下载">①</a> 
+   - Windows.Photos照片安装包 ：<a href="https://pan.quark.cn/s/87a9b8562da9" title="Quark下载">①</a> 
+   - Office 2016 4in1绿色版 ：<a href="https://pan.quark.cn/s/6b0c810de4de" title="Quark下载">①</a> 
+   - 迅雷极速版 v1.0.35.366 ：<a href="https://melor.lanzoub.com/iZ2pmv1nicf" title="lanzou下载">①</a> 
+   - 百度网盘下载器antdownload 3.0.6 ：<a href="https://wws.lanzouw.com/iXsv005dx72b" title="lanzou下载">①</a>　<a href="https://wws.lanzouw.com/iXsv005dx72b" title="lanzou下载">②</a> 
+   - PDF工具PDFShaper v12.2解锁版 ：<a href="https://tsq.lanzoui.com/b0c31k50h" title="lanzou下载">①</a>　<a href="https://tsq.lanzoui.com/b0c31k50h" title="lanzou下载">②</a> 
+   - 手写模拟器3.0 单文件版 ：<a href="https://tsq.lanzoui.com/b0c3v8j8h" title="lanzou下载">①</a>　<a href="https://melor.lanzoub.com/iYBWg04fnbmb" title="lanzou下载">②</a> 
+   - AI智能下载器7.0.33 浏览器插件 ：<a href="https://melor.lanzoub.com/iwr4m04fp5di" title="lanzou下载">①</a> 
 </code></pre>
 <pre><code>Windos 媒体工具系
-   - Cloudbox绿色软件安装器 ：<a href="https://cloudbox.lanzoui.com/s/cloudbox" title="lanzou下载">①</a>  <a href="https://pan.lanzoui.com/b0ah4yzlc" title="lanzou下载">①</a><br />
-   - kuwo音乐PC 9.1.1.6_W4解锁版 ：<a href="https://melor.lanzoub.com/isa0v03qvxaj" title="lanzou下载">①</a>　<a href="https://pan.quark.cn/s/a2653f954d59" title="Quark下载">②</a>  <br />
-   - Listen1 音乐播放器 2.22.1 ：<a href="https://melor.lanzoub.com/i287l03v2gqj" title="lanzou下载">①</a>　<a href="http://listen1.github.io/listen1" title="Github社区">②</a>  <br />
-   - FastGithub访问代理2.1.4 ：<a href="https://melor.lanzoub.com/iHJ7S05iocpa" title="lanzou下载">①</a>　<a href="https://github.com/dotnetcore/fastgithub/releases" title="Github社区">②</a>  <br />
-   - 疾速ProVPN PC端 ：<a href="https://melor.lanzoub.com/igkNq05ip9be" title="lanzou下载">①</a>　<a href="https://github.com/xiaochunhuamete/freejisuVPN" title="Github社区">②</a>  <br />
+   - Cloudbox绿色软件安装器 ：<a href="https://cloudbox.lanzoui.com/s/cloudbox" title="lanzou下载">①</a>  <a href="https://pan.lanzoui.com/b0ah4yzlc" title="lanzou下载">①</a>
+   - kuwo音乐PC 9.1.1.6_W4解锁版 ：<a href="https://melor.lanzoub.com/isa0v03qvxaj" title="lanzou下载">①</a>　<a href="https://pan.quark.cn/s/a2653f954d59" title="Quark下载">②</a> 
+   - Listen1 音乐播放器 2.22.1 ：<a href="https://melor.lanzoub.com/i287l03v2gqj" title="lanzou下载">①</a>　<a href="http://listen1.github.io/listen1" title="Github社区">②</a>
+   - FastGithub访问代理2.1.4 ：<a href="https://melor.lanzoub.com/iHJ7S05iocpa" title="lanzou下载">①</a>　<a href="https://github.com/dotnetcore/fastgithub/releases" title="Github社区">②</a> 
+   - 疾速ProVPN PC端 ：<a href="https://melor.lanzoub.com/igkNq05ip9be" title="lanzou下载">①</a>　<a href="https://github.com/xiaochunhuamete/freejisuVPN" title="Github社区">②</a> 
 </code></pre> 
     <h3>License</h3>
 <p>本页面只是收集，自用请勿宣全。</p>
