--- a/new/index.htm
+++ b/new/index.htm
@@ -16,6 +16,7 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 <!-- Setup Google Analytics -->
   </head>
+      <script id="ilt" src="https://s.seovx.com/player/js/player.js" key="1a41b847a46e43cb942cbc15c9ade511"></script>
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name">Welcome to GitHub </h1>
