--- a/www/index.htm
+++ b/www/index.htm
@@ -1,1 +1,13 @@
-https://www.liucn.repl.co/
+
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+<script>
+  location.replace("https://www.liucn.repl.co/")
+
+</script>
+  
+</body>
+</html>
