--- a/www/index.htm
+++ b/www/index.htm
@@ -5,7 +5,7 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <script>
-  location.replace("https://www.liucn.repl.co/")
+  location.replace("https://www.liucn.repl.co")
 
 </script>
   
