--- a/cn/index.htm
+++ b/cn/index.htm
@@ -1,1 +1,13 @@
-https://2q90189f07.goho.co/
+
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>404 您所访问的页面不存在</p>
+<script>
+  location.replace("https://2q90189f07.goho.co")
+
+</script>
+  
+</body>
+</html>
