--- a/mao/index.htm
+++ b/mao/index.htm
@@ -4,7 +4,7 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <script>
-  location.replace("https://raw.liucn.cc")
+  location.replace("https://liucn.cc/box")
 
 </script>
   
