--- a/index/index.htm
+++ b/index/index.htm
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>幸运坐标 - 得之我幸,失之我运! </title>
-    <link rel="stylesheet" href="css/init.css" tppabs="">
-    <link rel="stylesheet" href="css/iconfont.css" tppabs="">
-    <link rel="stylesheet" href="css/pc-index.css" tppabs="">
-    <link rel="shortcut icon" href="https://github.com/favicon.ico" />
+    <title>Welcome to Lucky Coord inate</title>
+    <link rel="stylesheet" href="index/css/init.css" tppabs="">
+    <link rel="stylesheet" href="index/css/iconfont.css" tppabs="">
+    <link rel="stylesheet" href="index/css/pc-index.css" tppabs="">
+    <link rel="shortcut icon" href="/favicon.ico" />
 </head>
 <body>
     <section class="full-box">
-        <img src="images/bg.png" tppabs="" alt="">
+        <img src="index/images/bg.png" tppabs="" alt="">
         <div class="main">
             <header class="ac">
-                <h4>- 幸运坐标 (MAX)-</h4>
+                <h4>- Lucky Coordinate (MAX)-</h4>
             </header>
 
             <main>
@@ -40,25 +40,25 @@
                                 </div>
                             </div>
                             <div class="main-top-left-bottom-right">
-                                <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/tv/')">
-                                    <span>TV客户端</span>
+                                <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/xbb/')">
+                                    <span>Biubiu 影视</span>
                                     <i class="iconfont iconpc"></i>
                                 </div>
-                                <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/tv/')">
-                                    <span>更多客户端开发中</span>
+                                <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/box/')">
+                                    <span>Android TV</span>
                                     <i class="iconfont iconicon-test"></i>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="main-top-center hoverDiv" id='source_tv'  onclick="window.open('../new/index.htm')">
+                    <div class="main-top-center hoverDiv" id='source_tv'  onclick="window.open('../new/')">
                         <div>
                             <p class="ac">幸运坐标 (MAX)</p>
-                            <p class="ac">liu673cn.github.io</p>
+                            <p class="ac">Lucky Coordinate</p>
 							
                         </div>
                         <div>
-                            <p class="ac">在中国有两大美剧站,其中一个叫爱美剧</p>
+                            <p class="ac">When you take actions across GitHub</p>
                         </div>
                     </div>
                     <div class="main-top-right">
@@ -96,14 +96,14 @@
                     </div>
                     <div class="main-bottom-one three hoverDiv" id='btnTwo'>
                         <h4>官方微博</h4>
-                        <p>@猫影视</p>
+                        <p>@影视</p>
                     </div>
                     <div class="main-bottom-two four hoverDiv">
                         <p class="ac">模块1</p>
                         <p class="ac">模块2</p>
                     </div>
                     <div class="main-bottom-one five hoverDiv" id='btnThree'>
-                        <h4>猫影视</h4>
+                        <h4>影视</h4>
                         <h4>官方抖音账号</h4>
                         <p>筹备中</p>
                     </div>
@@ -120,6 +120,6 @@
    </section> 
 </body>
 
-<script src="js/index.js" tppabs=""></script>
-<script src="js/pc-index.js" tppabs=""></script>
+<script src="index/js/index.js" tppabs=""></script>
+<script src="index/js/pc-index.js" tppabs=""></script>
 </html>
