--- a/index.htm
+++ b/index.htm
@@ -45,7 +45,7 @@
                                     <i class="iconfont iconpc"></i>
                                 </div>
                                 <div class="main-top-left-bottom-right-common ac hoverDiv" onclick="window.open('/box/')">
-                                    <span>Android TV</span>
+                                    <span>TVBox OSC</span>
                                     <i class="iconfont iconicon-test"></i>
                                 </div>
                             </div>
