--- a/new/win.htm
+++ b/new/win.htm
@@ -1,19 +1,17 @@
-   
+
 
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Github Lucky Coordinate</title>  
+    <title>Github Lucky Coordinate</title>
 <!-- End Jekyll SEO tag -->
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
+    <link rel="preload" href="../css/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="/x/assets/css/style.css?v=c9df12775816f51d27e08fc513c6593c2556f1be">
-<!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
+    <link rel="stylesheet" href="../css/style.css?v=c9df12775816f51d27e08fc513c6593c2556f1be">
 <!-- Setup Google Analytics -->
   </head>
   <body>
