--- a/index.htm
+++ b/index.htm
@@ -7,12 +7,11 @@
     <title>Github Lucky Coordinate</title>
 <!-- End Jekyll SEO tag -->
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="preload" href="../css/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./GitHub/css/normalize.css" media="screen">
-    <link href='./GitHub/css/fonts.css' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="./GitHub/css/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="./GitHub/css/github-light.css" media="screen">
-<!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
+    <meta name="theme-color" content="#157878">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="stylesheet" href="../css/style.css?v=c9df12775816f51d27e08fc513c6593c2556f1be">
 <!-- Setup Google Analytics -->
 
   </head>
